helloworld-liveliness-readiness.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: helloworld
  template:
    metadata:
      labels:
        app: helloworld
    spec:
      containers:
        - name: k8s-demo
          image: arjunachari12/k8s-demo
          ports:
            - name: nodejs-port
              containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: nodejs-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: nodejs-port
            initialDelaySeconds: 15
            timeoutSeconds: 30
