pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
spec:
  containers:
  - name: nginx-abhinav
    image: nginx:1.21.3
    ports:
    - containerPort: 8080
  - name: water-abhinav
    image: afakharany/watcher
